Change Build Config

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=999DF9BB406F1BA6B6DC819B01348C76
 ProjectName=Third Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
