--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Arenas/GremlinArena/Map/GremlinArena.GremlinArena
+GameDefaultMap=/Game/Arenas/NewGame/NewGame.NewGame
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
